--- a/assets/configs/playerSpawnConfig.json
+++ b/assets/configs/playerSpawnConfig.json
@@ -1,21 +1,21 @@
 {
 
-  "athenamed": {
+  "Athena Medium": {
     "hull": "athena:shipmed",
     "items": "99*rep core:advancedArmor-1 core:advancedShield-1 core:fixedGun-1 core:fixedGun-2 99*core:bulletClip",
     "money": 2310
   },
-  "athenalarge": {
+  "Athena Large": {
     "hull": "athena:ship",
     "items": "99*rep core:advancedArmor-1 core:advancedShield-1 athena:sword-1 athena:sword-2 99*core:bulletClip",
     "money": 5490
   },
-  "athenacapital": {
+  "Athena Capital": {
     "hull": "athena:shipcapital",
     "items": "99*rep core:advancedArmor-1 core:advancedShield-1 athena:sword-1 athena:mace-2 99*core:bulletClip",
     "money": 12930
   },
-  "athenasmall": {
+  "Athena Small": {
     "hull": "athena:shipsmall",
     "items": "3*rep core:lightArmor-1 core:smallShield-1 athena:smallsword-1",
     "money": 310
